--- a/index.html
+++ b/index.html
@@ -11,50 +11,50 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
         </div>
 
         <div class="row">
-            <div class="col-xs-12"><div class="box"></div></div>
+            <div class="col-xs-12"><div class="box centered">12 col</div></div>
         </div>
 
         <div class="row">
-            <div class="col-xs-8"><div class="box"></div></div>
-            <div class="col-xs-2"><div class="box"></div></div>
-            <div class="col-xs-2"><div class="box"></div></div>
+            <div class="col-xs-8"><div class="box centered">8 col</div></div>
+            <div class="col-xs-2"><div class="box centered">2 col</div></div>
+            <div class="col-xs-2"><div class="box centered">2 col</div></div>
         </div>
 
         <div class="row">
-            <div class="col-xs-1"><div class="box"></div></div>
-            <div class="col-xs-2"><div class="box"></div></div>
-            <div class="col-xs-2"><div class="box"></div></div>
-            <div class="col-xs-6"><div class="box"></div></div>
-            <div class="col-xs-1"><div class="box"></div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
+            <div class="col-xs-2"><div class="box centered">2 col</div></div>
+            <div class="col-xs-2"><div class="box centered">2 col</div></div>
+            <div class="col-xs-6"><div class="box centered">6 col</div></div>
+            <div class="col-xs-1"><div class="box centered">1 col</div></div>
         </div>
 
         <div class="row">
             <div class="col-xs-6">
                 <div class="row">
-                    <div class="col-xs-2"><div class="box"></div></div>
-                    <div class="col-xs-2"><div class="box"></div></div>
-                    <div class="col-xs-8"><div class="box"></div></div>
+                    <div class="col-xs-2 pd-2"><div class="box-nested centered">Nested 2 col</div></div>
+                    <div class="col-xs-2 pd-2"><div class="box-nested centered">Nested 2 col</div></div>
+                    <div class="col-xs-8 pd-2"><div class="box-nested centered">Nested 8 col</div></div>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="row">
-                    <div class="col-xs-6"><div class="box"></div></div>
-                    <div class="col-xs-6"><div class="box"></div></div>
+                    <div class="col-xs-6 pd-2"><div class="box-nested centered">Nested 6 col</div></div>
+                    <div class="col-xs-6 pd-2"><div class="box-nested centered">Nested 6 col</div></div>
                 </div>
             </div>
         </div>
