--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
             </div>
             <div class="col-xs-6">
-                <div class="row">
-                    <div class="col-xs-6 pd-2"><div class="box-nested centered">Nested 6 col</div></div>
-                    <div class="col-xs-6 pd-2"><div class="box-nested centered">Nested 6 col</div></div>
+                <div class="row box">
+                    <div class="col-xs-6"><div class="box-nested centered">Nested 6 col</div></div>
+                    <div class="col-xs-6"><div class="box-nested centered">Nested 6 col</div></div>
                 </div>
             </div>
         </div>
